# controller/coba.go
@@ -1082,6 +1082,18 @@ func InsertDokter(c *fiber.Ctx) error {
 
 // Update Function
 
+// UpdatePasien godoc
+// @Summary Update data pasien.
+// @Description Ubah data pasien.
+// @Tags Pasien
+// @Accept json
+// @Produce json
+// @Param id path string true "Masukan ID"
+// @Param request body Pasien true "Payload Body [RAW]"
+// @Success 200 {object} Pasien
+// @Failure 400
+// @Failure 500
+// @Router /upd-pasien/{id} [put]
 func UpdatePasien(c *fiber.Ctx) error {
 	db := config.Ulbimongoconn3
 
@@ -1128,6 +1140,18 @@ func UpdatePasien(c *fiber.Ctx) error {
 	})
 }
 
+// UpdateAntrian godoc
+// @Summary Update data antrian.
+// @Description Ubah data antrian.
+// @Tags Antrian
+// @Accept json
+// @Produce json
+// @Param id path string true "Masukan ID"
+// @Param request body Antrian true "Payload Body [RAW]"
+// @Success 200 {object} Antrian
+// @Failure 400
+// @Failure 500
+// @Router /upd-antrian/{id} [put]
 func UpdateAntrian(c *fiber.Ctx) error {
 	db := config.Ulbimongoconn3
 
@@ -1172,6 +1196,18 @@ func UpdateAntrian(c *fiber.Ctx) error {
 	})
 }
 
+// UpdatePoliklinik godoc
+// @Summary Update data poliklinik.
+// @Description Ubah data poliklinik.
+// @Tags Poliklinik
+// @Accept json
+// @Produce json
+// @Param id path string true "Masukan ID"
+// @Param request body Poliklinik true "Payload Body [RAW]"
+// @Success 200 {object} Poliklinik
+// @Failure 400
+// @Failure 500
+// @Router /upd-poliklinik/{id} [put]
 func UpdatePoliklinik(c *fiber.Ctx) error {
 	db := config.Ulbimongoconn3
 
@@ -1216,6 +1252,18 @@ func UpdatePoliklinik(c *fiber.Ctx) error {
 	})
 }
 
+// UpdateDokter godoc
+// @Summary Update data dokter.
+// @Description Ubah data dokter.
+// @Tags Dokter
+// @Accept json
+// @Produce json
+// @Param id path string true "Masukan ID"
+// @Param request body Dokter true "Payload Body [RAW]"
+// @Success 200 {object} Dokter
+// @Failure 400
+// @Failure 500
+// @Router /upd-dokter/{id} [put]
 func UpdateDokter(c *fiber.Ctx) error {
 	db := config.Ulbimongoconn3
 
